--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.0.0-beta.12",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.17",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
   },
