--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   },
   "dependencies": {
     "apexcharts": "^3.36.0",
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.3",
     "vue": "^3.2.13",
     "vue-echarts": "^6.2.3",
     "vue-echarts-v3": "^2.0.1",
