--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.servlet.context-path=/
 logging.level.org.springframework = info
 server.error.include-message=always
 
+spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/smartship
 spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.password=Smartship
