Database implementation and start of authorization

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/smartship
 spring.datasource.username=root
 spring.datasource.password=Smartship
+
+# App Properties
