--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.error.include-message=always
 
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/smartship
-spring.datasource.username=root
-spring.datasource.password=Smartship
+spring.datasource.username=team1
+spring.datasource.password= Smartship_team1
 
 # App Properties
