--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.username=team1
 spring.datasource.password= Smartship_team1
 
 # App Properties
+server.app.jwtSecret= bezKoderSecretKey
+server.app.jwtExpirationMs= 86400000
