--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.19",
+    "vee-validate": "^4.7.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
