--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
-    "element-plus": "^2.2.19",
     "vee-validate": "^4.7.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
@@ -23,8 +22,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   },
   "eslintConfig": {
     "root": true,
