--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@vueuse/motion": "^2.0.0-beta.12",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.19",
+    "tailwind": "^4.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5"
   },
@@ -20,8 +21,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   },
   "eslintConfig": {
     "root": true,
