--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.org.springframework = info
 server.error.include-message=always
 
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/smartship_1
+spring.datasource.url=jdbc:mysql://localhost:3306/smartship
 spring.datasource.username=team1
 spring.datasource.password= Smartship_team1
 
