--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,7 +4,13 @@ logging.level.org.springframework = info
 server.error.include-message=always
 
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/smartship
+spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
 spring.datasource.username=root
-spring.datasource.password=rootroot
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password= Bartlomiej8!
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+
+# App Properties
+server.app.jwtSecret= bezKoderSecretKey
+server.app.jwtExpirationMs= 86400000
