--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@vueuse/motion": "^2.0.0-beta.12",
     "core-js": "^3.8.3",
-    "element-plus": "^2.2.19",
+    "vee-validate": "^4.7.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
