--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,22 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --dest build",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "@vueuse/motion": "^2.0.0-beta.12",
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
-    "vee-validate": "^4.7.2",
+    "vee-validate": "^4.7.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
-    "yup": "^0.32.11"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
