--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/smartship
 spring.datasource.username=team1
 spring.datasource.password=Smartship_team1
 spring.jpa.hibernate.ddl-auto=update
+
+# App Properties
+server.app.jwtSecret= bezKoderSecretKey
+server.app.jwtExpirationMs= 86400000
