--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,5 +6,5 @@ server.error.include-message=always
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/smartship
 spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
