--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,12 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off",
+      "vue/no-mutating-props": "off",
+      "no-unused-vars": "off",
+      "no-unreachable": "off"
+    }
   },
   "browserslist": [
     "> 1%",
