--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "vue": "^3.2.13",
     "vue-chartjs": "^4.1.2",
     "vue-router": "^4.1.5",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
