--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/motion": "^2.0.0-beta.12",
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.19",
     "tailwind": "^4.0.0",
