--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,9 +4,9 @@ logging.level.org.springframework = info
 server.error.include-message=always
 
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/smartship
-spring.datasource.username=team1
-spring.datasource.password=Smartship_team1
+spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
+spring.datasource.username=root
+spring.datasource.password=Bartlomiej8!
 spring.jpa.hibernate.ddl-auto=update
 
 # App Properties
