--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,8 +6,7 @@ server.error.include-message=always
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/smartship
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=rootroot
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
@@ -15,11 +14,7 @@ spring.jpa.hibernate.ddl-auto= update
 # App Properties
 server.app.jwtSecret= bezKoderSecretKey
 server.app.jwtExpirationMs= 6400000
-=======
-spring.datasource.password=Bartlomiej8!
-spring.jpa.hibernate.ddl-auto=update
 
-# App Properties
-server.app.jwtSecret= bezKoderSecretKey
-server.app.jwtExpirationMs= 86400000
->>>>>>> 7870fd00be9db7e294096423b86273f6b8152991
+
+
+
