--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,8 +8,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
 spring.datasource.username=root
 spring.datasource.password=Bartlomiej8!
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # App Properties
 server.app.jwtSecret= bezKoderSecretKey
