--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "http_common": "^1.0.3",
+    "leaflet": "^1.9.3",
+    "leaflet-ptv-developer": "^1.0.2",
+    "maplibre-gl": "^2.4.0",
     "vee-validate": "^4.7.1",
     "vue": "^3.2.13",
     "vue-chartjs": "^4.1.2",
