--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,15 +3,42 @@ server.servlet.context-path=/
 logging.level.org.springframework = info
 server.error.include-message=always
 
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
-spring.datasource.username=root
-spring.datasource.password=Bartlomiej8!
-
-spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
+#spring.datasource.username=root
+#spring.datasource.password=Bartlomiej8!
+#
+#spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # App Properties
 server.app.jwtSecret= bezKoderSecretKey
 server.app.jwtExpirationMs= 6400000
+
+# setting the database - fixed URL (otherwise spring will choose an arbitrary one)
+# note: dialects are auto-detected by hibernate
+spring.datasource.url=jdbc:h2:mem:testdb
+
+# drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# used to initialise the db with data (remove this section of you don't have it)
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-locations=classpath:/data.sql
+
+# turn statistics on
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
+
+# show all queries for debugging purposes
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
+
+# enabling h2 console
+spring.h2.console.enabled=true
+
+# allow others to connect to h2 database
+spring.h2.console.settings.web-allow-others=true
