--- a/server/pom.xml
+++ b/server/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.server</groupId>
     <artifactId>server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>server</name>
     <description>server</description>
     <properties>
@@ -20,10 +21,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
