--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "fetch-intercept": "^2.4.0",
     "http_common": "^1.0.3",
     "http-server": "^14.1.1",
     "leaflet": "^1.9.3",
