--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@vueuse/core": "^9.9.0",
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
