--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@vueuse/core": "^9.9.0",
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
+    "click-outside-vue3": "^4.0.1",
     "core-js": "^3.8.3",
     "http_common": "^1.0.3",
     "http-server": "^14.1.1",
