--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -38,3 +38,11 @@ server.app.jwtExpirationMs= 6400000
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.type=trace
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=btynior@gmail.com
+spring.mail.password=djfjsdzctgpxpaaf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
