--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "vue": "^3.2.13",
     "vue-chartjs": "^4.1.2",
     "vue-router": "^4.1.5",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.1.0",
     "yup": "^0.32.11"
   },
