--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "npx http-server -p ${PORT} ./dist"
+    "start": "npx http-server -p ${PORT} ./dist",
+    "test:unit": "vue-cli-service test:unit",
+    "test:clear-cache": "node_modules/.bin/jest --clearCache"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -44,12 +46,25 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.1",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/test-utils": "^2.0.2",
+    "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1"
+  },
+  "jest": {
+    "preset": "@vue/cli-plugin-unit-jest",
+    "testMatch": [
+      "**/src/**/*.spec.js"
+    ],
+    "verbose": true
   },
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "jest": true
     },
     "extends": [
       "plugin:vue/vue3-essential",
@@ -63,7 +78,10 @@
       "vue/no-mutating-props": "off",
       "no-unused-vars": "off",
       "no-unreachable": "off"
-    }
+    },
+    "overrides": [ {
+      "files": [ "**/src/**/*.spec.js" ]
+    }]
   },
   "browserslist": [
     "> 1%",
