--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/smartship
 spring.datasource.username=team1
 spring.datasource.password=Smartship_team1
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
+#spring.datasource.username=root
+#spring.datasource.password=Bartlomiej8!
 
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto= update
