--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,16 +43,15 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
-    "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/test-utils": "^2.0.2",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^27.5.1",
-    "jest": "^27.5.1"
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^27.5.1",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   },
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest",
