changed notification preview

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.servlet.context-path=/
 logging.level.org.springframework = info
 server.error.include-message=always
 
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
-spring.datasource.username=root
-spring.datasource.password=Bartlomiej8!
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
+#spring.datasource.username=root
+#spring.datasource.password=Bartlomiej8!
 
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto= update
@@ -16,10 +16,10 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 server.app.jwtSecret= bezKoderSecretKey
 server.app.jwtExpirationMs= 6400000
 
-#spring.jpa.database=mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/smartship
-#spring.datasource.username=team1
-#spring.datasource.password=Smartship_team1
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/smartship
+spring.datasource.username=team1
+spring.datasource.password=Smartship_team1
 ## setting the database
 ## note: dialects are auto detected by hibernate
 #spring.datasource.url=jdbc:mysql://oege.ie.hva.nl:3306/ztyniorb
