--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,9 +17,9 @@ server.app.jwtSecret= bezKoderSecretKey
 server.app.jwtExpirationMs= 6400000
 
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/smartship
-spring.datasource.username=team1
-spring.datasource.password=Smartship_team1
+spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
+spring.datasource.username=root
+spring.datasource.password=Bartlomiej8!
 ## setting the database
 ## note: dialects are auto detected by hibernate
 #spring.datasource.url=jdbc:mysql://oege.ie.hva.nl:3306/ztyniorb
