--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,7 +17,7 @@ server.app.jwtSecret= bezKoderSecretKey
 server.app.jwtExpirationMs= 6400000
 
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
+spring.datasource.url=jdbc:mysql://localhost:3306/smartship_test
 spring.datasource.username=root
 spring.datasource.password=Bartlomiej8!
 ## setting the database
