--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -16,32 +16,26 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 server.app.jwtSecret= bezKoderSecretKey
 server.app.jwtExpirationMs= 6400000
 
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/smartship_test
-spring.datasource.username=root
-spring.datasource.password=Bartlomiej8!
 ## setting the database
-## note: dialects are auto detected by hibernate
-#spring.datasource.url=jdbc:mysql://oege.ie.hva.nl:3306/ztyniorb
-#spring.datasource.username=tyniorb
-#spring.datasource.password=b$.Vo+aSG#$ID7
-#
-## drop and create table again, good for testing, comment this in production
-#spring.jpa.hibernate.ddl-auto=create-drop
-#
-## used to initialise the db with data
-#spring.sql.init.mode=always
-#spring.jpa.defer-datasource-initialization=true
-##spring.sql.init.data-locations=classpath:/data.sql
-#
-## turn statistics on
-#spring.jpa.properties.hibernate.generate_statistics=true
-#logging.level.org.hibernate.stat=debug
-#
-## show all queries for debugging purposes
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.type=trace
+# note: dialects are auto detected by hibernate
+spring.datasource.url=jdbc:mysql://oege.ie.hva.nl:3306/ztyniorb
+spring.datasource.username=tyniorb
+spring.datasource.password=b$.Vo+aSG#$ID7
+
+# drop and create table again, good for testing, comment this in production
+# used to initialise the db with data
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.data-locations=classpath:/data.sql
+
+# turn statistics on
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
+
+# show all queries for debugging purposes
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
 
 
 spring.mail.host=smtp.gmail.com
