--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^3.9.1",
     "click-outside-vue3": "^4.0.1",
     "core-js": "^3.8.3",
+    "eslint-plugin-jest": "^27.2.1",
     "http_common": "^1.0.3",
     "http-server": "^14.1.1",
     "leaflet": "^1.9.3",
@@ -43,18 +44,14 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
     "@vue/test-utils": "^2.0.2",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
-    "jest-expect-message": "^1.1.2",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^27.5.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.5.1",
+    "jest-expect-message": "^1.1.2",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   },
@@ -75,8 +72,7 @@
     "transform": {
       "^.+\\.js$": "babel-jest",
       "^.+\\.vue$": "@vue/vue3-jest",
-      "^.+\\.(jpg|jpeg|png|gif|svg|mp3|mp4|mpeg)$":
-      "<rootDir>/jest-media-transformer.js"
+      "^.+\\.(jpg|jpeg|png|gif|svg|mp3|mp4|mpeg)$": "<rootDir>/jest-media-transformer.js"
     },
     "verbose": false
   },
@@ -101,7 +97,12 @@
       "vue/no-mutating-props": "off",
       "no-unused-vars": "off",
       "no-unreachable": "off",
-      "jest/valid-expect": [ "error", { "maxArgs": 2 } ]
+      "jest/valid-expect": [
+        "error",
+        {
+          "maxArgs": 2
+        }
+      ]
     },
     "overrides": [
       {
@@ -116,7 +117,6 @@
         ]
       }
     ]
-
   },
   "browserslist": [
     "> 1%",
