--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,13 +52,15 @@
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.5.1",
     "jest-expect-message": "^1.1.2",
+    "jest-localstorage-mock": "^2.4.26",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   },
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest",
     "setupFilesAfterEnv": [
-      "jest-expect-message"
+      "jest-expect-message",
+      "jest-localstorage-mock"
     ],
     "testMatch": [
       "**/src/**/*.spec.js"
