--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.servlet.context-path=/
 logging.level.org.springframework = info
 server.error.include-message=always
 
-#spring.jpa.database=mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/smartship_personal
-#spring.datasource.username=root
-#spring.datasource.password=Bartlomiej8!
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/smartship
+spring.datasource.username=team1
+spring.datasource.password=Smartship_team1
 
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto= update
@@ -18,9 +18,9 @@ server.app.jwtExpirationMs= 6400000
 
 # setting the database
 # note: dialects are auto detected by hibernate
-spring.datasource.url=jdbc:mysql://oege.ie.hva.nl:3306/ztyniorb
-spring.datasource.username=tyniorb
-spring.datasource.password=b$.Vo+aSG#$ID7
+#spring.datasource.url=jdbc:mysql://oege.ie.hva.nl:3306/ztyniorb
+#spring.datasource.username=tyniorb
+#spring.datasource.password=b$.Vo+aSG#$ID7
 
 # drop and create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create-drop
