--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/smartship
 spring.datasource.username=team1
 spring.datasource.password=Smartship_team1
 
-spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # App Properties
 server.app.jwtSecret= bezKoderSecretKey
@@ -31,13 +31,13 @@ spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.data-locations=classpath:/data.sql
 
 # turn statistics on
-spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=debug
+#spring.jpa.properties.hibernate.generate_statistics=true
+#logging.level.org.hibernate.stat=debug
 
 # show all queries for debugging purposes
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type=trace
 
 
 spring.mail.host=smtp.gmail.com
