--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,12 +51,7 @@
     "@vue/test-utils": "^2.0.2",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
     "jest-expect-message": "^1.1.2",
-    "babel-jest": "^27.5.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.5.1",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1"
+    "babel-jest": "^27.5.1"
   },
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest",
@@ -108,15 +103,11 @@
         "files": [
           "**/src/**/*.spec.js"
         ],
-        "plugins": [
-          "jest"
-        ],
         "extends": [
           "plugin:jest/recommended"
         ]
       }
     ]
-
   },
   "browserslist": [
     "> 1%",
