Working backend tests

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -55,3 +55,5 @@ logging.level.org.hibernate=error
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+pring.jpa.properties.hibernate.connection.charSet=UTF-8
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
